# clip-generator

./: .gitignore  README.md  config.py  index.html  package.json  pyproject.toml  requirements.txt  run-backend.sh  tasks.json
.history/: .env_20250507211454  .env_20250507224310  .gitignore_20250508063230  index_20250507234455.html  index_20250507234507.html  index_20250508004540.html  index_20250508004828.html  main_20250507220806.py  main_20250507223603.py  main_20250508035353.py  package_20250507231422.json  setup-env_20250507222855.zsh  tasks_20250507231105.json  tasks_20250507231202.json
.history/app/: main_20250507223743.py  main_20250507224855.py  main_20250507230001.py  main_20250507230656.py  main_20250507232937.py  main_20250507233047.py  main_20250507233558.py  main_20250507233949.py  main_20250507234246.py  main_20250508002345.py  main_20250508002353.py  main_20250508002410.py  main_20250508002712.py  main_20250508002910.py  main_20250508005102.py  main_20250508005454.py  main_20250508005721.py
.history/models/: request_20250507223357.py
.history/services/: clip_service_20250507223503.py
.history/templates/: index_20250507230029.html  index_20250507234309.html  index_20250508004817.html
.history/utils/: __init___20250507221841.py  captioner_20250508035353.py  clipper_20250507215406.py  clipper_20250507215955.py  clipper_20250508035353.py
app/: main.py
app/api/: downloadTwitchVOD.py  generateClips.py  (+2 more)
tests/: conftest.py  test_cli.py
utils/: audio.py  captioner.py  clipper.py  convertto_srt.py  metadata.py  scene_detection.py  transcription.py
(+41 files in other folders)
